# obsidian-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml
src/obsidian_mcp/: __init__.py
