[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian - full read/write access to your vault"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DR. TK" }
]
keywords = ["obsidian", "mcp", "markdown", "notes", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/obsidian-mcp"
Repository = "https://github.com/yourusername/obsidian-mcp"
Issues = "https://github.com/yourusername/obsidian-mcp/issues"

[project.scripts]
obsidian-mcp = "obsidian_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

